Tue Apr 29 18:44:17 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/ManyToMany/DataReaderListener.h:
        * tests/DCPS/ManyToMany/DataReaderListener.cpp:

          Improved logging.

        * tests/DCPS/ManyToMany/Options.h:

          Added supplying the number of subscriber processes and how long
          the subscriber should set its timeout for.

        * tests/DCPS/ManyToMany/Writer.cpp:

          Added tracking how many subscribers to wait for.

        * tests/DCPS/ManyToMany/run_test.pl:
        
          Added interface for configuring the test.

        * tests/DCPS/ManyToMany/subscriber.cpp:

          Changed to use passed in timeout.

Mon Apr 28 15:57:29 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/Dispose/main.cpp:

          Fix Fuzz

Sun Apr 27 19:59:18 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/ManyToMany/Options.h:

          Getting test to work and fixed wide character build errors.

        * tests/DCPS/ManyToMany/DataReaderListener.cpp:
        * tests/DCPS/ManyToMany/Writer.cpp:
        * tests/DCPS/ManyToMany/publisher.cpp:
        * tests/DCPS/ManyToMany/run_test.pl:
        * tests/DCPS/ManyToMany/subscriber.cpp:

          Getting test to work.

Sat Apr 26 10:44:58 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/ManyToMany/DataReaderListener.h:

          Fixed compile error for gcc.

Fri Apr 25 21:34:24 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/ManyToMany/ManyToMany.mpc:

          Fixed IDl project reference

Fri Apr 25 21:09:46 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/LargeSample/Messenger.idl:

          Added parameter to track which participant sample is sent from.

        * tests/DCPS/ManyToMany:
        * tests/DCPS/ManyToMany/DataReaderListener.h:
        * tests/DCPS/ManyToMany/DataReaderListener.cpp:
        * tests/DCPS/ManyToMany/ManyToMany.mpc: