@@ -1,3 +1,9 @@
+Wed Apr 30 12:58:01 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
+
+        * tests/DCPS/ManyToMany/run_test.pl:
+
+          Added more controls for test.
+
 Tue Apr 29 18:44:17 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
 
         * tests/DCPS/ManyToMany/DataReaderListener.h:
@@ -15,7 +21,7 @@ Tue Apr 29 18:44:17 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
           Added tracking how many subscribers to wait for.
 
         * tests/DCPS/ManyToMany/run_test.pl:
-        
+
           Added interface for configuring the test.
 
         * tests/DCPS/ManyToMany/subscriber.cpp:
